Add download link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ ul "#myList", ->
 
     <h2>Installation</h2>
 
-    <p>Download <a href="#">html.min.js</a> and link to it on your site!</p>
+    <p>Download <a href="https://raw.github.com/andrewberls/html.js/master/html.min.js">html.min.js</a> and link to it on your site!</p>
     <pre class="prettyprint lang-js"><code>&lt;script src='path/to/html.min.js'&gt;&lt;/script&gt;</code></pre>
 
   </div><!-- .container -->
