Add GitHub link

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@ ul "#myList", ->
     <p>Download <a href="https://raw.github.com/andrewberls/html.js/master/html.min.js">html.min.js</a> and link to it on your site!</p>
     <pre class="prettyprint lang-js"><code>&lt;script src='path/to/html.min.js'&gt;&lt;/script&gt;</code></pre>
 
+    <p style="text-align: center;"><a href="http://github.com/andrewberls/html.js" class="github-link" target="_blank">View project on GitHub →</a></p>
+
   </div><!-- .container -->
 
 
