--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-    <p><em>So are we.</em> That's why we created HTML.js. Instead of all that, why not write something like this?</p>
+    <p><em>So are we.</em> Instead of all that, why not write something like this?</p>
     <pre class="prettyprint lang-js"><code>div({ 'class': divClass }, function() {
     return p(content)
 })</code></pre>
@@ -68,7 +68,7 @@
 
 
     <h2>Methods</h2>
-    <p>HTML.js turns HTML tags into methods. You can call <code>div()</code>, <code>a()</code>, <code>h3()</code>, or <a href="http://www.htmldog.com/reference/htmltags/">just about every tag there is</a>. Methods are defined on the <code>window</code> object, although HTML.js methods <em class="underline">will not override existing methods</em>. All methods are also available under the <code>htmljs</code> namespace, e.g., <code>htmljs.div()</code> and return strings.</p>
+    <p>HTML.js turns HTML tags into methods. You can call <code>div()</code>, <code>a()</code>, <code>h3()</code>, or <a href="http://www.htmldog.com/reference/htmltags/">just about every tag there is</a>. Methods are defined on the <code>window</code> object, although HTML.js <em class="underline">will not override existing methods</em>. All methods are also available under the <code>htmljs</code> namespace, e.g., <code>htmljs.div()</code> and return strings.</p>
 
 
 
@@ -114,7 +114,7 @@ ul "#myList", ->
     <div class="container">
       <h2>Why HTML.js?</h2>
 
-      <p>HTML.js is a small weekend project, but there is a chance it may be just what you need.</p>
+      <p>HTML.js is a small weekend project, but there's a chance it may suit your needs.</p>
 
       <h4>Keep things light</h4>
       <p>HTML.js is under 2K and does not depend on jQuery or any other library, although it works great with them!</p>
